--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>Ética a la intel·ligència artificial</h1>
 	<p>Aquest web preten ser un punt d´informació per nous dilemes del <abbr title="Segle">S.</abbr>XXI</p>
-	<img src="img/etica.jpg" alt="etica"> 
+	<img src="/img/etica.jpg" alt="etica"> 
 	<table>
 	<tr>
 		<th>Edat</th>
